automatically backed up by learn

--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -12,6 +12,6 @@
     <p><%= title.name %> <input id="figure[title_ids]" name="figure[title_ids][]" value="<%= title.id %>" type="checkbox" /></p>
   <% end %>
 
-
+  <input type="submit" value="Edit Figure" />
 
 </form>
