--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -1,7 +1,7 @@
 <h2>Create New Landmark</h2>
 
 <form method="post" action="/landmarks/new">
-  <label for="figure_name">Name </label> <input id="figure_name" name="figure[name]" type="text" />
+  <label for="landmark_name">Name </label> <input id="landmark_name" name="landmark[name]" type="text" />
 
   <label for="figure_titles">Titles</label>
 
