--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -1,7 +1,7 @@
 <h2>Create New Landmark</h2>
 
 <form method="post" action="/landmarks/new">
-  <label for="landmark_name">Name </label> <input id="landmark_name" name="landmark[name]" type="text" />
+  <!-- <label for="landmark_name">Name </label> <input id="landmark_name" name="landmark[name]" type="text" />
 
   <label for="figure_titles">Titles</label>
 
@@ -15,7 +15,7 @@
 
   <% @landmarks.each do |landmark| %>
     <input id="landmark[name]" name="figure[landmark_ids][]" type="checkbox" />
-  <% end %>
+  <% end %> -->
 
 </form>
 
