--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -1,6 +1,8 @@
 <h2>All Historical Landmarks</h2>
-
-<!-- add content here -->
-
+  <ol>
+  <% @landmarks.each do |landmark| %>
+    <li><%= landmark.name %></li>
+  <% end %>
+  </ol>
 <a class="button" href="/figures">Figures</a>
 <a class="button" href="/">Home</a>
