automatically backed up by learn

--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -8,6 +8,8 @@
   <h3><label for="year_completed">Year Completed:</label></h3>
   <input id="year_completed" name="landmark[year_completed]" type="text" />
 
+  <input type="submit" value="Update Landmark" />
+
 </form>
 
 <a class="button" href="/figures">Landmarks</a>
