--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -6,7 +6,7 @@
   <input id="landmark_name" name="landmark[name]" type="text" />
 
   <h3><label for="year_completed">Year Completed:</label></h3>
-  <input id="year_completed" name="landmark[year_completed]" type="text" />
+  <input id="landmark_year_completed" name="landmark[year_completed]" type="text" />
 
   <input type="submit" value="Update Landmark" />
 
