--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -8,7 +8,7 @@
   <h3><label for="year_completed">Year Completed:</label></h3>
   <input id="landmark_year_completed" name="landmark[year_completed]" type="text" />
 
-  <input type="submit" value="Update Landmark" />
+  <input type="submit" value="Create New Landmark" />
 
 </form>
 
