--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -4,7 +4,7 @@
     <input id="hidden" type="hidden" name="_method" value="patch" />
 
     <h3><label for="landmark_name">New Name:</label></h3>
-    <input id="landmark_name" name="landmark[name]" type="text" />
+    <input id="name" name="landmark[name]" type="text" />
 
     <h3><label for="landmark_year_completed">New Year Completed:</label></h3>
     <input id="landmark_year_completed" name="landmark[year_completed]" type="text" value="<%= @landmark.year_completed %>" />
