--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -7,7 +7,7 @@
     <input id="name" name="landmark[name]" type="text" />
 
     <h3><label for="landmark_year_completed">New Year Completed:</label></h3>
-    <input id="landmark_year_completed" name="landmark[year_completed]" type="text" value="<%= @landmark.year_completed %>" />
+    <input id="year_completed" name="landmark[year_completed]" type="text" value="<%= @landmark.year_completed %>" />
 
 
   </form>
