--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -9,6 +9,7 @@
     <h3><label for="landmark_year_completed">New Year Completed:</label></h3>
     <input id="year_completed" name="landmark[year_completed]" type="text" value="<%= @landmark.year_completed %>" />
 
+    <input type="submit" value="Edit Landmark" />
 
   </form>
 
